# icdcs_2025

./: .gitignore  README.md  bib-leo.bib  flake.nix  main.tex  pyproject.toml  requirements.txt  sample.bib  shell.nix
notebooks/: fl_weights.npy  part1.ipynb  part2.ipynb  part3.ipynb
notebooks/utils/: model_nslkdd_test.py  nslkdd.py  partition.py
paper/: main.tex
