[project]
name = "icdcs-2025"
version = "0.1.0"
description = "Tutorial materials for FL and Security at ICDCS 2025"
authors = [
    { name = "leolavaur", email = "82591009+leolavaur@users.noreply.github.com" },
]
requires-python = ">=3.11,<3.12"
readme = "README.md"
dependencies = [
    "tensorflow[and-cuda]>=2.17.0,<3",
    "pandas>=2.2.2,<3",
    "flwr[simulation]>=1.9.0,<2",
    "keras>=3.4.1,<4",
    "scikit-learn>=1.5.1,<2",
    "flwr-datasets>=0.5.0",
    "datasets>=3.1.0",
    "pyarrow<20.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5,<7",
    "ruff>=0.5.2,<0.6",
    "matplotlib>=3.9.1,<4",
    "ipywidgets>=8.1.3,<9",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
include = ["*.py", "*.pyi", "pyproject.toml", "*.ipynb"]

[tool.ruff.lint]
select = ["D"]
